[package]
name = "causal-one"
version = "0.1.0"
description = "Causal One App"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "causal-one"
edition = "2021"

[lib]
name = "causal_one"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.2.0" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-shell = "2.0.0"
num-complex = "0.4.6"

[features]
default = []
