[package]
name = "causal_one"
version = "0.1.0"
description = "Causal One App"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "causal_one"
edition = "2021"

[lib]
name = "causal_one"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.0", features = ["android", "shell"] }
tauri-plugin-shell = "2.0.0"
num-complex = "0.4.6"

[features]
default = []

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21" }
android-activity = "0.6"
ndk-glue = "0.10"
