[package]
name = "causal_one"
version = "0.1.0"
description = "Causal One App"
authors = ["you"]
edition = "2021"

[lib]
name = "causal_one"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.0", features = ["android"] }
tauri-plugin-shell = "2.0.0"
num-complex = "0.4.6"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21" }
android-activity = "0.6"
ndk-glue = "0.10"
